2005/10/05	kaffeetisch

	* Glib.pm, NEWS: Merge from stable-1-10.

	* t/c.t: Change the flags test yet again.  Make it explicit this
	time by using is_deeply() and \@{} so it hopefully works with any
	version of Test::More.

2005/09/30	kaffeetisch

	* GObject.xs (gperl_register_object): Automatically add each known
	interface an object implements to the corresponding @ISA.
	(gperl_new_object): If we encounter an object which has no known
	type in its ancestry except for G_TYPE_OBJECT, register it with a
	unique package name and take a look at the interfaces it
	implements -- if there is one we know, add it to the new package's
	@ISA.

2005/09/05	kaffeetisch

	* MANIFEST, META.yml: Remove META.yml.

	* Glib.pm, Makefile.PL, NEWS, README: Stable release 1.100.

2005/07/27	muppetman

	* CodeGen.pm: Forgot to delete the leftover gtk junk before committing.

2005/07/27	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.093.

2005/07/26	muppetman

	* CodeGen.pm, Makefile.PL, MANIFEST: Take out the Gtk2-specific
	portions of Gtk2::CodeGen, make it extensible, and call it
	Glib::CodeGen.

2005/07/12	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.092.

2005/07/05	kaffeetisch

	* GUtils.xs, t/1.t: Bind and test g_markup_escape_text.

2005/07/02 00:32 pcg

	* GMainLoop.xs (add_watch): on native win32, convert the perl fileno
	to a winsock fileno using win32_get_osfhandle and call
	g_io_channel_win32_new_socket directly.
	* Subclass.pm: fix my contact address while we are at it.

2005/06/28	kaffeetisch

	* GenPod.pm (podify_ancestors): Use one less space for the
	indention of ancestors to make them line up correctly.

2005/06/22	kaffeetisch

	* t/c.t: Use is() instead of is_deeply() to test flags values
	since the latter was changed to always use the string version of
	overloaded objects in recent versions of Test::More, whereas the
	former seems to work correctly.  Tested with Test::More 0.45 and
	0.60.

2005/06/20	kaffeetisch
